# envoy-config-schema

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  setup-dev-environment.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.dev.sh  setup-dev-environment.sh
.github/: ci.Dockerfile
.github/workflows/: build-and-push-ci-image.yml  build-and-push-devcontainer.yml  build-and-push-protobuf.yml  build-and-push-tre.yml  build-publish-dev-conatiner-image.yml  deploy-docs.yml  generate-and-release-schema.yaml  publish-schema.yml
docs/: docusaurus.config.ts  package-lock.json
dotfiles/: bashrc  p10k.zsh  shellrc  zsh_plugins.txt  zshrc
envoy-schema-generator/: pyproject.toml
envoy-schema-generator/envoy_schema_generator/: cli.py  github_utils.py  version_resolver.py
images/: ci.Dockerfile  protobuf.Dockerfile  tre.Dockerfile
makefiles/: dependencies.mk  json_schema.mk  poetry.mk  versioning.mk  zsh.mk
